infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geograph
  namespace: pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geograph
  template:
    metadata:
      labels:
        app: geograph
    spec:
      containers:
        - name: api
          image: ghcr.io/dzfranklin/plantopo-geograph:latest
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 600
