infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geograph
  namespace: pt
  labels:
    app: geograph
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: geograph.plantopo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geograph
                port: { name: http }
  tls:
    - secretName: wildcard-prod
      hosts:
        - '*.plantopo.com'
